collapsed nav bar is working, issue with login|register

--- a/APIMe/ClientApp/src/app/nav-menu/nav-menu.component.css
+++ b/APIMe/ClientApp/src/app/nav-menu/nav-menu.component.css
@@ -11,13 +11,6 @@
   margin-right: 8px;
 }
 
-.navbar-custom {
-  padding-top: 0;
-  padding-bottom: 0;
-  line-height: 50px;
-  max-height: 50px;
-}
-
 .navbar-brand-custom {
   font-size: 20px;
 }
